Use Java 17 for API generation